--- a/resume.tex
+++ b/resume.tex
@@ -89,6 +89,20 @@
     \faMapMarker \hspace{.5pt} {Holbrook, New York}
 \end{center}
 
+
+%----------- Objective -------------
+%----------- OBJECTIVE -----------
+
+\section{Objective}
+\resumeSubHeadingListStart
+  \item{
+    Accomplished Front-End Engineer with leadership experience as Vice President at JP Morgan Chase, specializing in building accessible, user-focused interfaces. Seeking to leverage expertise in modern JavaScript frameworks and cross-functional collaboration to contribute to innovative, impactful software solutions. Passionate about user experience, performance optimization, and team enablement in agile environments.
+  }
+\resumeSubHeadingListEnd
+
+
+
+
 %----------- WORK EXPERIENCE -----------
 
 \section{Work Experience}
